# worklog_opsdevnz

./: .gitignore  Agents.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
docs/: index.md  release-process.md
docs/design/: README.md  config-discovery-strategy.md  security-trust-model.md  structure-modes.md  worklog-as-blog.md
docs/specs/: NFR.md  README.md  acceptance-criteria.md  functional-requirements.md  implementation-status.md
docs/stories/: README.md  story-1-daily-entry.md  story-2-per-project-config.md  story-3-browse-entries.md  story-4-standardise.md  story-5-retro-entries.md  story-6-auto-index.md  story-7-monorepo-config-discovery.md  story-8-custom-template.md
site/: 404.html  index.html  search.json  sitemap.xml
site/design/: index.html
site/design/structure-modes/: index.html
site/design/worklog-as-blog/: index.html
site/specs/: index.html
site/specs/NFR/: index.html
site/stories/: index.html
src/template_opsdevnz/: __init__.py  cli.py
src/worklog_opsdevnz/: __init__.py  cli.py  config.py  paths.py  template.py
tests/: test_cli.py  test_config.py  test_paths.py  test_template.py
