[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog-opsdevnz"
version = "0.0.2"
description = "Configurable worklog management CLI for dated development logs"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpsDev.nz Collective", email = "john@opsdev.nz"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown"
]
keywords = ["worklog", "documentation", "daily-log", "cli", "markdown"]
requires-python = ">=3.12"

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/startmeup-nz/worklog-opsdevnz"
Documentation = "https://opsdev.nz/modules/worklog-opsdevnz"
Repository = "https://github.com/startmeup-nz/worklog-opsdevnz.git"
"Bug Tracker" = "https://github.com/startmeup-nz/worklog-opsdevnz/issues"

[project.scripts]
worklog-opsdevnz = "worklog_opsdevnz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", ".venv*"]

[tool.setuptools.package-data]
worklog_opsdevnz = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/worklog_opsdevnz --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
